packagekit: Avoid horizontal scrollbar on updates page in low res
At resolutions less than 1097px the updates page shows a
horizontal scrollbar. This commit fixes that.

--- a/pkg/packagekit/updates.less
+++ b/pkg/packagekit/updates.less
@@ -23,6 +23,10 @@ tr.listing-ct-item {
     }
 }
 
+th.packages {
+    white-space: nowrap;
+}
+
 .severity-critical {
     color: #a30000;
 }
@@ -80,6 +84,15 @@ tr.security.listing-ct-item {
 @media screen and (min-width: 641px) and (max-width: 1150px) {
     .listing-ct-item th {
         min-width: 30%;
+    }
+    .listing-ct th.details-header, .listing-ct td.changelog {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1151px) and (max-width: 1648px) {
+    tr.listing-ct-item td.changelog, tr.listing-ct-item td.changelog p {
+    max-width: 40vw;
     }
 }
 
